get request for data
code works but need to show data to interface

--- a/upApp/app/src/main/res/values/strings.xml
+++ b/upApp/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="button_back">Back</string>
 
     <string name="profile_title">Vista profile</string>
+    <string name="user_list">Lista de usuarios:</string>
+    <string name="list_name_user">Nombre</string>
+    <string name="list_name_age">edad</string>
+    <string name="list_btn_actions">Option</string>
 </resources>
